--- a/frontend/mini-amazon/src/Login/LoginPortal.css
+++ b/frontend/mini-amazon/src/Login/LoginPortal.css
@@ -1,7 +1,7 @@
 
 @media all and (min-width: 480px) {
     .Login {
-      padding: 60px 0;
+      padding: 60px 80px;
     }
   
     .Login form {
