--- a/amazon/templates/layout-backup.html
+++ b/amazon/templates/layout-backup.html
@@ -30,8 +30,16 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
+              <!-- {% # if current_user.is_authenticated %} -->
                 <a class="nav-item nav-link" href="{{ url_for('recommended') }}">Recommended</a>
+                <a class="nav-item nav-link" href="{{ url_for('cart') }}">Cart</a>
                 <a class="nav-item nav-link" href="{{ url_for('new_review') }}">Review</a>
+                <a class="nav-item nav-link" href="{{ url_for('profileHome') }}">Account</a>
+                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+              <!-- {% else %}
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+              {% endif %} -->
             </div>
           </div>
         </div>
