--- a/frontend/mini-amazon/src/Login/LoginPortal.css
+++ b/frontend/mini-amazon/src/Login/LoginPortal.css
@@ -69,7 +69,7 @@ h2 {
   -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
   background: #fff;
-  margin-top: 100px;
+  margin-top: 50px;
   padding: 30px;
   width: 60%;
   max-width: 450px;
@@ -162,4 +162,10 @@ input[type=text]:placeholder {
 	size: 20px;
   }
   
-  
+  .padding {
+    margin-top: 10px;
+  }
+
+  .pad {
+    padding: 5px;
+  }
