--- a/frontend/mini-amazon/src/Login/LoginPortal.css
+++ b/frontend/mini-amazon/src/Login/LoginPortal.css
@@ -69,7 +69,7 @@ h2 {
   -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
   background: #fff;
-  margin-top: 50px;
+
   padding: 30px;
   width: 60%;
   max-width: 450px;
@@ -169,3 +169,11 @@ input[type=text]:placeholder {
   .pad {
     padding: 5px;
   }
+
+  .heading {
+    color: #92badd;
+  size: 40px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900; 
+  font-size: 3rem; /*Optional*/
+    }
